# inclusion_solver

./: CMakeLists.txt  README  README.md  config.sh  cuda-config.sh  env-setup-scorec.sh  inclusion.cpp  inclusion_solver.cpp  inclusion_solver.hpp  pfem_extras.cpp  pfem_extras.hpp  scorec_config.sh
cmake/: ExtraCmakeUtilities.cmake  FindHYPRE.cmake  FindMETIS.cmake
config/cmake/modules/: MfemCmakeUtilities.cmake
meshes/: setup_1x1_global_coarse_template_mesh.mesh
meshes/inclusion_setup_1x1_coarser_mesh-coarse_4p.osh/: 0.osh  1.osh  2.osh  3.osh
meshes/setup_1x1_crv-coarse.osh/: 0.osh
meshes/setup_1x1_crv_2p.osh/: 0.osh  1.osh
meshes/setup_5x1_9k_2p.osh/: 0.osh  1.osh
meshes/simx/: setup_1x1.smd  setup_1x1_crv-coarse.sms  setup_1x1_crv.smd  setup_1x1_crv_nat.x_t  setup_1x1_nat.x_t  setup_5x5.smd  setup_5x5_nat.x_t
